# ghr-stats

./: .gitignore  .markdownlint-cli2.jsonc  Cargo.toml  LICENSE  README.md  config.example.toml  lychee.toml
.cargo/: config.toml
.fso-amem/: project.toml
.github/workflows/: docs.yml  on-pr-sync.yml  on-release-published.yml  rust.yml
docs/: cli.md  configuration.md  design.md  hooks.md  metrics.md
packaging/: ghr-stats-collector.service
packaging/hooks/: README.md  job-completed.sh  job-started.sh
scripts/: release.sh
src/: cli.rs  config.rs  daemon.rs  entrypoint.rs  main.rs  model.rs  paths.rs  privileged.rs  serve.rs  systemd.rs  uninstall.rs  util.rs
src/collectors/: cgroup.rs  github.rs  hooks.rs  host.rs  mod.rs  procscan.rs  runners.rs
src/config/: mod.rs  persist.rs
src/config_wizard/: mod.rs
src/github/: mod.rs  validate.rs
src/hooks/: env.rs  ingest.rs  install.rs  mod.rs  uninstall.rs
src/ipc/: client.rs  mod.rs  server.rs
src/metrics/: encode.rs  mod.rs  pull.rs  push.rs
src/ops/: mod.rs  systemd.rs  uninstall.rs  wizard.rs
src/service/: ipc_server.rs  mod.rs  serve.rs
src/service/metrics/: encode.rs  mod.rs  pull.rs  push.rs
src/service/store/: mod.rs  reader.rs  schema.rs  writer.rs
src/setup/: mod.rs
src/shared/: error.rs  ipc.rs  mod.rs  paths.rs
src/shared/collectors/: cgroup.rs  cpu.rs  host.rs  mod.rs  runners.rs
src/shared/config/: mod.rs  persist.rs  secret.rs
src/shared/github/: mod.rs  validate.rs
src/shared/hooks/: env.rs  ingest.rs  install.rs  mod.rs  uninstall.rs
src/shared/models/: mod.rs
src/store/: mod.rs  reader.rs  schema.rs  writer.rs
src/tui/: action.rs  app.rs  help.rs  history.rs  ipc_client.rs  mod.rs  screen.rs  wizard.rs
src/tui/input/: action.rs  mod.rs  screen.rs
src/tui/snapshots/: ghr_stats__tui__wizard__tests__snapshot_org_input.snap  ghr_stats__tui__wizard__tests__snapshot_pat_input_with_rejection.snap  ghr_stats__tui__wizard__tests__snapshot_pick_action.snap
src/tui/view/: config.rs  jobs.rs  mod.rs  overview.rs  runner.rs  trends.rs
src/tui/view/snapshots/: ghr_stats__tui__view__tests__snapshot_confirm_popup.snap  ghr_stats__tui__view__tests__snapshot_time_chart.snap
src/tui/viewmodel/: copy.rs  mod.rs  status.rs  style.rs
src/tui/views/: config.rs  jobs.rs  mod.rs  overview.rs  runner.rs  trends.rs
src/tui/views/snapshots/: ghr_stats__tui__views__tests__snapshot_confirm_popup.snap  ghr_stats__tui__views__tests__snapshot_time_chart.snap
src/tui/widgets/: help.rs  mod.rs  wizard.rs
src/tui/widgets/snapshots/: ghr_stats__tui__widgets__wizard__tests__snapshot_confirmed.snap  ghr_stats__tui__widgets__wizard__tests__snapshot_done_ok.snap  ghr_stats__tui__widgets__wizard__tests__snapshot_pat_input_with_rejection.snap  ghr_stats__tui__widgets__wizard__tests__snapshot_remove_confirm.snap  ghr_stats__tui__widgets__wizard__tests__snapshot_remove_org_input.snap
