[package]
name = "ghr-stats"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.103"
clap = { version = "4.6.1", features = ["derive"] }
crossbeam-channel = "0.5.15"
ctrlc = { version = "3.5.2", features = ["termination"] }
dialoguer = "0.12.0"
nix = { version = "0.31.3", features = ["fs"] }
ratatui = "0.30.2"
rusqlite = { version = "0.40.1", features = ["bundled"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sysinfo = "0.39.5"
thiserror = "2.0.18"
toml = "1.1.2"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
ureq = { version = "2", features = ["json"] }
uzers = "0.12.2"
walkdir = "2.5.0"

[dev-dependencies]
tempfile = "3.27.0"
